rename template directory

--- a/client-config-templates/client-all-traffic.conf
+++ b/client-config-templates/client-all-traffic.conf
@@ -1,6 +1,6 @@
 [Interface]
 PrivateKey = [PEER_PRIVATE_KEY]
-Address = [PEER_IPV4_ADDR]/32
+Address = 192.168.42.[PEER_IPV4_ADDR_LAST_DIGIT]/32
 
 [Peer]
 PublicKey = [ENDPOINT_PUBLIC_KEY]
