--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 requires-python = ">=3.14"
 dependencies = [
     "flask>=3.1.2",
+    "pypng>=0.20220715.0",
     "qrcode>=8.2",
 ]
